--- a/css/estilos.css
+++ b/css/estilos.css
@@ -384,7 +384,7 @@ footer li > a:hover{
   }
   }
 @media (max-device-width : 480px){
-  footer ul{
+  #DOCSLINK{
     display: none;
     padding: 0px;
   }
