--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,10 +9,12 @@ body{
 }
 
 .container{
-	width: 80%;
+	width: 60%;
   margin: 0 auto;
 }
-
+.container p{
+  max-width: 
+}
 .doc-container{
   max-width: 500px;
   margin: 0 auto;
