--- a/css/estilos.css
+++ b/css/estilos.css
@@ -367,12 +367,20 @@ footer li > a:hover{
 @media (min-device-width : 480px){
   .dropdown li{
     border-radius: 5px;
-  }
-  }
+    }
 
 @media (min-device-width : 480px){
   .container{
   width: 60%;
+  max-width: 700px;
+}
+}
+
+@media (min-device-width : 480px){
+  .doc-container{
+    margin: 0 auto;
+  width: 60%;
+  max-width: 600px;
 }
 }
 
@@ -390,12 +398,7 @@ footer li > a:hover{
     padding: 0px;
   }
   }
-@media (max-device-width : 480px){
-  #DOCSLINK li{
-    display: none;
-    padding: 0px;
-  }
-  }
+
 
 /*ID's*/
 #DOCS
