--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,14 +8,92 @@ body{
 	font-family: "Roboto", Arial, Sans-Serif;
 }
 
+hr{
+  width: 80%;
+  margin-bottom: 30px;
+  
+}
 .container{
-	width: 90%;
+	width: 80%;
   margin: 0 auto;
 }
+
 .container ul li{
   color: #0E667F;
 }
+.container img{
+  width: 55%;
+  max-width: 200px;
+  margin:inherit;
+  display: block;
+  padding-bottom: 10px;
 }
+
+@media (min-device-width : 480px){
+  #LEY .container img{
+  display: inline-block;
+  width: 33%;
+  margin-left: 0px;
+  margin-right: auto;
+  vertical-align: top;
+}
+}
+
+@media (min-device-width : 480px){
+  #LEY .container p{
+  display: inline-block;
+  padding-left: 300px;
+  margin-top: -50px;
+}
+}
+
+@media (min-device-width : 480px){
+  #LEY h4{
+  display: inline-block;
+  margin-left: 0px;
+  margin-right: auto;
+  padding-left: 30px;
+  padding-top: 90px !important;
+  max-width: 55%;
+  text-align: left;
+}
+}
+
+@media (min-device-width : 480px){
+  hr{
+    display: none;
+  }
+}
+
+
+
+.container p{
+  padding-bottom: 20px;
+}
+
+.fav{
+  margin: inherit;
+}
+
+.con{
+  margin: inherit;
+}
+
+.sign{
+  font-style: italic;
+  font-weight: 100;
+  text-align: right;
+  padding-bottom: 60px;
+  max-width: 200px;
+  margin-right: 0px;
+  margin-left: auto;
+}
+
+.sign a{
+  text-decoration: none;
+  color: #cccccc;
+}
+
 .doc-container{
   max-width: 500px;
   margin: 0 auto;
@@ -41,6 +119,39 @@ body{
   max-width: 150px;
 }
 
+.percent p{
+  width: 100%;
+  text-align: center;
+}
+.percent img{
+  width: 55%;
+  max-width: 200px;
+  margin: 0 auto;
+  display: block;
+  padding-bottom: 10px;
+}
+
+@media (min-device-width : 480px){
+  .percent p{
+  padding: 50px 0px 0px 0px !important;
+}
+}
+
+@media (min-device-width : 480px){
+  .row{
+  width: 100%;
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+}
+}
+
+@media (min-device-width : 480px){
+  .row img{
+  width: 100% !important;
+}
+}
+
 .jumbotron{
 	color: #FFF;
 	margin-top: 200px; 
@@ -62,12 +173,14 @@ body{
   line-height: 160%;
 }
 
+.row{
+  width: 100%;
+}
 
 header{
 	width: 100%;
 	top: 0px;
 	position: fixed;
-  z-index: 2000;
 }
 
 h1{
@@ -83,11 +196,13 @@ h3{
   font-size: 20px;
   font-weight: 400;
   text-align: center;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 h4{
   font-size: 18px;
   font-weight: 400;
+  margin-top: 0px;
+  text-align: center;
 }
 p{
   font-size: 16px;
@@ -369,22 +484,8 @@ footer li > a:hover{
 @media (min-device-width : 480px){
   .dropdown li{
     border-radius: 5px;
-    }
-
-@media (min-device-width : 480px){
-  .container{
-  width: 60%;
-  max-width: 700px;
-}
-}
-
-@media (min-device-width : 480px){
-  .doc-container{
-    margin: 0 auto;
-  width: 60%;
-  max-width: 600px;
-}
-}
+  }
+  }
 
 @media (min-device-width : 480px){
   footer ul li{
@@ -401,6 +502,16 @@ footer li > a:hover{
   }
   }
 
+@media (min-device-width : 480px){
+  .percent{
+  display: inline-block;
+  width: 33%;
+  vertical-align: top;
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
 
 /*ID's*/
 #DOCS
@@ -414,9 +525,9 @@ footer li > a:hover{
   float: right;
 }
 #LEY h4{
-  padding-top: 50px;
+  padding-top: 10px;
   padding-bottom: 10px;
 }
-#DOCSLINK
+
 /*media queries*/
 
