--- a/css/estilos.css
+++ b/css/estilos.css
@@ -106,17 +106,26 @@ hr{
   padding-left: 15px;
   padding-right: 15px;
   max-width: 150px;
+  text-align: center;
 }
-.col-2 p{
+.col-2 a{
   max-width: 100%;
   font-weight: 50;
   font-style: italic;
   text-align: center;
+  text-decoration: none;
+  color: #cccccc;
 }
+.col-2 a:hover{
+  color: #fff;
+}
+
 .col-2 img{
+  display: block;
   margin: 0 auto;
-  width: 150px;
-  max-width: 150px;
+  width: 100px;
+  max-width: 100px;
+  padding-bottom: 20px;
 }
 
 .percent p{
@@ -149,6 +158,18 @@ hr{
 @media (min-device-width : 480px){
   .row img{
   width: 100% !important;
+}
+}
+
+@media (min-device-width : 480px){
+  #PROYECTO img{
+  padding-bottom: 30px;
+}
+}
+
+@media (min-device-width : 480px){
+  #PROYECTO h4{
+  padding-bottom: 30px;
 }
 }
 
@@ -512,7 +533,47 @@ footer li > a:hover{
 }
 }
 
+@media (min-device-width : 480px){
+  #OPINION .fav p{
+  width: 70%;
+  padding-left: 300px;
+  margin-top: -150px;
+  margin-left: 0px;
+  margin-right: auto;
+}
+}
 
+@media (min-device-width : 480px){
+  #OPINION .fav img{
+  margin-left: 0px;
+  margin-right: auto;
+}
+}
+
+@media (min-device-width : 480px){
+  #OPINION .con p{
+  width: 70%;
+  min-width: 600px;
+  margin-top: -150px;
+  margin-left: 0px;
+  margin-right: auto;
+}
+}
+
+@media (min-device-width : 480px){
+  #OPINION .con img{
+  margin-right: 0px;
+  margin-left: auto;
+}
+}
+
+@media (min-device-width : 480px){
+  #OPINION .con .sign{
+  margin-right: 0px;
+  margin-left: auto;
+  padding-right: 300px;
+}
+}
 /*ID's*/
 #DOCS
 #LEY
