--- a/css/estilos.css
+++ b/css/estilos.css
@@ -116,8 +116,20 @@ hr{
   text-decoration: none;
   color: #cccccc;
 }
+
 .col-2 a:hover{
   color: #fff;
+}
+.col-2 a:visited{
+  max-width: 100%;
+  font-weight: 50;
+  font-style: italic;
+  text-align: center;
+  text-decoration: none;
+  color: #cccccc;
+}
+.col-2 a:visited:hover{
+  color:#fff;
 }
 
 .col-2 img{
