--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,10 @@ body{
 	font-family: "Roboto", Arial, Sans-Serif;
 }
 
+a:-webkit-any-link{
+  text-decoration: none;
+}
+
 hr{
   width: 80%;
   margin-bottom: 30px;
